--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         margin: 0;
         background-color: #000000;
       }
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     </style>
 
     <noscript>Please enable javascript to continue using this application.</noscript>
